--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-		<title>Document</title>
+		<title>에픽스 디자인 스튜디오 | EPICS DESIGN</title>
 		<style>
 			/* root */
 			@font-face {
@@ -2141,7 +2141,7 @@
 					<div class="sub-menu">
 						<div
 							class="title-line sub-title"
-							data-url="https://www.epics1.co.kr/%EB%94%94%EC%9E%90%EC%9D%B8%EC%83%81%EB%8B%B4">
+							data-url="https://epics1.co.kr/_config/page/%EB%AC%B8%EC%9D%98%EC%82%AC%ED%95%AD">
 							<div class="sub-text">SUPPORT REQUEST</div>
 							<div class="main-text">유지보수 신청</div>
 						</div>
@@ -2332,3 +2332,4 @@
 		});
 	</script>
 </html>
+
