--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-e<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
@@ -2332,4 +2332,5 @@ e<!DOCTYPE html>
 		});
 	</script>
 </html>
+
 
