--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8" />
+		<meta id="meta_og_image" property="og:image" content="https://lh3.googleusercontent.com/MFyj_u6Hu4g7P36ZwrqDfXEkqZSerfKHIdkP9Qq1HE41gRyu1iJFCfsWuO9eafic9mUsiIif2ZUy50H4e_kMwm2Pb8wW_tqSd2Ove2U-3ncaF00d9Kzmlg=s0">
+		<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/MFyj_u6Hu4g7P36ZwrqDfXEkqZSerfKHIdkP9Qq1HE41gRyu1iJFCfsWuO9eafic9mUsiIif2ZUy50H4e_kMwm2Pb8wW_tqSd2Ove2U-3ncaF00d9Kzmlg" sizes="196x196">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 		<title>에픽스 디자인 스튜디오 | EPICS DESIGN</title>
@@ -2332,6 +2334,7 @@
 		});
 	</script>
 </html>
+
 
 
 
