--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="ko">
 	<head>
 		<meta charset="UTF-8" />
-		<meta id="meta_og_image" property="og:image" content="https://lh3.googleusercontent.com/Z4EBge9pDhLq2UHeGWZU1qR4hcO8oE90zfOS7KIhcsEafAQx2t-5HsQ4KySOWiJ8RGoNoIu6xcwlIXEDJKrhMKQcD1GOQ8Bp4rYeHz0DHdOh6bpKL1PJTO8=s0">
+		<meta name="title" content="에픽스디자인 : 홈페이지 디자인 및 상세페이지 제작 전문 업체">
+		<meta property="og:image" content="https://storage.googleapis.com/cr-resource/image/db2dba16aaf9fa8295e332c8d2270796/epics/650/ddf9dba6852d8128453d58353bceeb3d.jpg?_1755676938" data-dynamic="true">
 		<link rel="icon" type="image/png" href="https://lh3.googleusercontent.com/lzJ_1orLvePDWKXzMopwHuFztchJP_czjnTb2OpwAu_XQPB0qYj_KgpV8HQrlzw6Opq4Gq_INwnAp9BzHffiZVWqr0wcot1KoKgTm5s1_fXNfj5PV9RH=s0" sizes="196x196">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-		<title>에픽스 디자인 스튜디오 | EPICS DESIGN</title>
+		<title>에픽스 디자인 | 홈페이지 디자인 및 상세페이지 제작 전문 업체</title>
 		<style>
 			/* root */
 			@font-face {
@@ -2334,6 +2335,7 @@
 		});
 	</script>
 </html>
+
 
 
 
